--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,1 +1,7 @@
-WELCOME TO HOME
+<div class="page">
+  <div class="page-card">
+    <div class="content">
+      WELCOME TO HOME
+    </div>
+  </div>
+</div>
