--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,69 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
+
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Open Sans', sans-serif;
+  background-color: whitesmoke;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.page {
+  padding: 10px;
+  height: 100%;
+}
+
+.page-card {
+  width: 100%;
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
+  .content {
+    padding: 10px;
+  }
+}
+
+.hidden {
+  display: none;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.width25 {
+  width: 25%;
+}
+
+.width50 {
+  width: 50%;
+}
+
+.width75 {
+  width: 75%;
+}
+
+.font600 {
+  font-weight: 600;
+}
+
+.f16 {
+  font-size: 16px;
+}
+
+.f24 {
+  font-size: 24px;
+}
+
+.f36 {
+  font-size: 36px;
+}
+
+.f48 {
+  font-size: 48px;
+}
