--- a/src/app/components/ui-components/app-bar-top/app-bar-top.component.scss
+++ b/src/app/components/ui-components/app-bar-top/app-bar-top.component.scss
@@ -5,7 +5,6 @@
   align-items: center;
   width: 100%;
   height: 60px;
-  border-bottom: 1px solid lightgray;
 }
 
 .menu-icon {
@@ -16,14 +15,16 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  color: gray;
 }
 
 .app-bar-title {
+  color: gray;
   line-height: 60px;
-  text-indent: 10px;
   flex: 6;
   height: 100%;
   justify-content: start;
+  text-align: center;
   align-items: center;
   overflow: hidden;
   white-space: nowrap;
